# tinybuild

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: tinybuild.yml
example/: Info.plist  names.txt
example/Resources/: message.txt
example/Sources/: main.swift
example/tasks/: banner.sh  bundle.sh  compile.sh  greeting.sh  package.sh  resource.sh
src/: build.rs  cache.rs  graph.rs  main.rs  runner.rs  store.rs  task.rs
